--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,12 @@ ul {
   /* margin-bottom: 14px; */
   margin-bottom: 0.6vw;
   color: var(--ui-font-color);
+  cursor: pointer;
+  transition-duration: .5s;
+}
+
+.nav-option:hover {
+  background-color: var(--ui-hightlight-dark);
 }
 
 .nav-option-ext {
