--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,12 @@ ul {
 .video-player {
   position: absolute;
   width: 100vw;
-  height: 80vh;
-  z-index: -6;
+  /* height: 100%; */
+  z-index: 6;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .video-player.hide {
@@ -45,15 +49,17 @@ ul {
 
 
 .media-control {
-  background-color: aqua;
   height: 20px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  position: relative;
+  position: absolute;
   z-index: 5;
+  bottom: -50px;
+  width: 100%;
   flex-shrink: none;
+  margin-top: 50px;
 }
 
 .progress-bar {
@@ -65,6 +71,12 @@ ul {
   flex-shrink: 0;
   position: relative;
 }
+
+.media-toggles {
+  display: flex;
+  margin-top: 10px;
+}
+
 .timestamp {
   position: absolute;
   z-index: 2;
@@ -72,6 +84,7 @@ ul {
   height: 20px;
   flex-shrink: 0;
   background-color: yellow;
+  pointer-events: none;
 }
 
 .current-progress {
@@ -83,6 +96,7 @@ ul {
 }
 
 .page {
+  position: relative;
   box-sizing: border-box;
   /* padding-top: 120px; */
   padding-top: 8.4vw;
@@ -93,6 +107,19 @@ ul {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.background {
+  position: absolute;
+  /* top: 140px; */
+  top: 9.5vw;
+  left: 0;
+  right: 0;
+  /* bottom: 0; */
+  z-index: 0;
+  display: flex;
+  justify-content: center;
+  margin: auto;
 }
 
 .header {
@@ -278,18 +305,7 @@ ul {
   margin-top: 3vw;
 }
 
-.background {
-  position: absolute;
-  /* top: 140px; */
-  top: 9.5vw;
-  left: 0;
-  right: 0;
-  /* bottom: 0; */
-  z-index: 0;
-  display: flex;
-  justify-content: center;
-  margin: auto;
-}
+
 
 @keyframes logo-spin {
   from {
