--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
+  height: 100vh;
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -17,8 +19,8 @@
   --ui-primary-light: rgb(235,241,255,.90);
   --ui-font-color: rgb(147, 164,224, .70);
   --ui-hightlight-dark: rgba(143, 143, 143, 0.40);
-  --border-radius-med: 2.7vw;
-  --border-radius-small: 0.4vw;
+  --border-radius-med: clamp(5px, 2.7vw, 30px);
+  --border-radius-small: clamp(1px, 0.4vw, 5px);
 }
 
 
