--- a/src/components/notepad.css
+++ b/src/components/notepad.css
@@ -50,4 +50,6 @@
   color: black;
   border: 2px solid rgb(150, 160, 230, 80);
   overflow-y: scroll;
+  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
 }
