--- a/src/App.css
+++ b/src/App.css
@@ -104,9 +104,10 @@ ul {
   max-width: 1100px;
   margin: auto;
   position: relative;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   padding-top: 4%;
   padding-bottom: 5%;
+  padding-left: clamp(0px, 3%, 37px);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -119,6 +120,7 @@ ul {
   position: absolute;
   /* top: 140px; */
   padding-top: 1.5%;
+  padding-left: 3%;
   left: 0;
   right: 0;
   /* bottom: 0; */
@@ -128,7 +130,7 @@ ul {
   margin: auto;
   background-blend-mode: luminosity;
   opacity: 0.85;
-  filter: drop-shadow(0px 0px 10.1px rgba(255, 255, 255, 0.5));
+  filter: var(--glow);
 }
 
 .header {
@@ -168,9 +170,9 @@ ul {
 }
 
 .content {
-  height: 100%;
+  height: 75%;
   position: relative;
-  margin-left: 1.5%;
+  /* margin-left: 1.5%; */
   margin-top: 8%;
   z-index: 1;
 }
@@ -182,11 +184,21 @@ ul {
   margin-left: 1.8%;
 }
 
+.side-section-large > img {
+  position: relative;
+  animation: floatUpAndDownShort 2s infinite alternate ease-in-out;
+}
+
+.creature-headshot > img {
+  position: relative;
+  animation: sideShift 5s infinite alternate ease-in-out;
+}
+
 .creature-headshots {
   position: absolute;
   /* top: -200px; */
   right: 0;
-  top: clamp(-180px, -15vw, 100px);
+  top: clamp(-170px, -15vw, 100px);
   align-self: end;
   justify-self: end;
   gap: 5%;
@@ -195,8 +207,8 @@ ul {
 .creature-headshot {
   /* height: 175px;
   width: 175px; */
-  height: clamp(1em, 10vw, 120px);
-  width: clamp(1em, 10vw, 120px);
+  height: clamp(1em, 10vw, 110px);
+  width: clamp(1em, 10vw, 110px);
   border: 1px solid var(--ui-primary-dark);
   border-radius: var(--border-radius-med);
 }
@@ -226,7 +238,7 @@ ul {
   position: relative;
   top: clamp(-50px, -4vw, 10px);
   width: 18.5%;
-  max-height: clamp(100px, 36vw, 100%);
+  max-height: clamp(100px, 35vw, 100%);
   background: rgba(57, 156, 227, 0.9);
   border-radius: var(--border-radius-med);
   filter: drop-shadow(0px 0px 10.1px rgba(255, 255, 255, 0.5));
@@ -246,6 +258,15 @@ ul {
   animation: floatUpAndDown 8s infinite alternate ease-in-out;
 }
 
+@keyframes sideShift {
+  0%,
+  100% {
+    left: 0;
+  }
+  50% {
+    left: -5%;
+  }
+}
 @keyframes floatUpAndDown {
   0%,
   100% {
@@ -253,6 +274,15 @@ ul {
   }
   50% {
     bottom: -5%;
+  }
+}
+@keyframes floatUpAndDownShort {
+  0%,
+  100% {
+    bottom: 0;
+  }
+  50% {
+    bottom: -2%;
   }
 }
 
@@ -276,7 +306,7 @@ ul {
 }
 
 .sn-label {
-  font-size: clamp(5px, 2.2vw, 22px);
+  font-size: clamp(5px, 2vw, 22px);
   font-weight: 600;
 }
 
@@ -292,7 +322,7 @@ ul {
 .nav-option {
   font-family: Oxanium;
   position: relative;
-  height: clamp(1rem, 4vw, 2.6rem);
+  height: clamp(0.7rem, 3.7vw, 2.6rem);
   width: 59%;
   margin-bottom: 3%;
   font-size: clamp(1rem, 3vw, 2rem);
@@ -387,4 +417,65 @@ ul {
   100% {
     background-position: 0% 50%;
   }
+}
+
+.flair-snake {
+  position: absolute;
+  left: 0.1%;
+  top: -26.5%;
+  width: 3.3%;
+  filter: drop-shadow(0px 0px 10.1px rgba(255, 255, 255, 0.5));
+}
+
+.flair-a {
+  position: absolute;
+  left: 0%;
+  bottom: 1.4%;
+  width: 3.5%;
+  filter: drop-shadow(0px 0px 10.1px rgba(255, 255, 255, 0.5));
+}
+
+.flair-bottom-barcode {
+  position: absolute;
+  left: 52.3%;
+  bottom: 1.6%;
+  width: 22%;
+  filter: drop-shadow(0px 0px 10.1px rgba(255, 255, 255, 0.5));
+}
+.flair-side-barcode {
+  position: absolute;
+  right: -1.4%;
+  bottom: 96%;
+  width: 16%;
+  transform: rotate(-90deg);
+  filter: drop-shadow(0px 0px 10.1px rgba(255, 255, 255, 0.5));
+}
+.flair-menu {
+  position: absolute;
+  left: 4.6%;
+  top: -30.6%;
+  width: 25%;
+  filter: drop-shadow(0px 0px 10.1px rgba(255, 255, 255, 0.5));
+}
+
+.flair-settings-barcode {
+  position: absolute;
+  left: 41%;
+  top: 28%;
+  width: 7%;
+  filter: drop-shadow(0px 0px 10.1px rgba(255, 255, 255, 0.5));
+}
+
+.flair-usa {
+  position: absolute;
+  right: 8%;
+  bottom: 15%;
+  width: 4%;
+}
+
+.flair-a1 {
+  position: absolute;
+  right: 6.5%;
+  top: -41%;
+  width: 3%;
 }
