--- a/src/components/notepad.css
+++ b/src/components/notepad.css
@@ -38,7 +38,7 @@
   flex-direction: column;
   height: 80%;
   width: 100%;
-  max-height: 30vw;
+  max-height: var(--height-28vw);
 }
 
 .section-container {
