--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,8 @@
   --ui-hightlight-dark: rgba(143, 143, 143, 0.40);
   --border-radius-med: clamp(5px, 2.7vw, 30px);
   --border-radius-small: clamp(1px, 0.4vw, 5px);
+  --height-28vw: clamp(1px,28vw, 313px);
+  --glow: drop-shadow(0px 0px 10.1px rgba(255, 255, 255, 0.5));
 }
 
 
