--- a/src/components/notepad.css
+++ b/src/components/notepad.css
@@ -3,9 +3,32 @@
   font-family: Oxanium;
   line-height: 190%;
   font-weight: 600;
-  font-size: larger;
+  font-size: clamp(10px, 2vw, 22px);
   height: 12%;
   margin: 0 0 5px 0;
+}
+
+.arrow-down {
+  position: absolute;
+  bottom: 30%;
+  right: 1%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  border-top: 12px solid var(--ui-primary-dark);
+}
+.arrow-up {
+  position: absolute;
+  top: 20%;
+  right: 1%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  border-bottom: 12px solid var(--ui-primary-dark);
 }
 
 .notepad {
@@ -22,7 +45,7 @@
 .note-input {
   width: 100%;
   height: 100%;
-  font-size: larger;
+  font-size: clamp(5px, 2vw, 22px);
   background: transparent;
   border: none;
   color:black;
@@ -45,7 +68,8 @@
   resize: none;
   width: 100%;
   height: 100%;
-  padding: 10px;
+  padding: clamp(5px, 1vw, 10px);
+  font-size: clamp(.8em, 2vw, 1em);
   background: rgb(240, 248, 255,0.9);
   box-sizing: border-box;
   border-radius: var(--border-radius-med);
